--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "todos",
-  "version": "1.0.0",
+  "name": "@muhammad_zaki/my-todo-app",
+  "version": "2.0.0",
   "description": "MAKE YOUR DAYS ORGANIZED",
   "main": "index.js",
   "type": "module",
   "bin": "todo.js",
+  "publishConfig":{ 
+    "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
